v1.0.5.1
# Fixed: Use &hellip; instead of ...
# Fixed: Use sanitize_html_class to sanitize HTML class
# Fixed: Remove comment-list from add_theme_support( 'html5' )

v1.0.5
# Enhancement: Updated customizer option prefix from 'ast-settings' with 'astra-settings'
# Fixed: PHP Notice - Array to string conversion
# Fixed: Change date('Y') to date_i18n(__('Y','textdomain'))
# Fixed: Remove comment-form from add_theme_support( 'html5' )
# Fixed: `excerpt_more` filter affecting on admin side.
# Fixed: Missing escaping variable updated.

v1.0.4.1
# Fixed: Warning on first time activates the theme.

v1.0.4
# New: Responsive Typography Param implemented.
# New: Added option for Menu Label on Small Devices.
# New: Added option for Mobile Header Alignment.
# Improvement: Updated primary submenu navigation icon.
# Improvement: Updated Small Devices menu navigation styling.
# Removed: Default Small Devices Menu Label - 'Menu'.

v1.0.3.1
# Removed functions that override WordPress global's.

v1.0.3
# Enhancement: Removed option _astra_auto_version and used option ASTRA_THEME_SETTINGS for auto storing latest theme version.
# Fixed: Content Layout meta working on beaver builder page/post.

v1.0.2
# New: Added Beaver Themer support.
# New: Added option to disable primary header navigation.
# New: Added widget area support for header & footer.
# New: Added editor style minification file support.
# New: Added header layouts.
# Improvement: Updated responsive header styling.
# Improvement: Removed unwanted minified & unminified files.
# Improvement: Removed unwanted constants.
# Improvement: Removed unused variables when a classes are initialised.
# Improvement: Moved hook astra_body_bottom at the top of the wp_footer hook.
# Improvement: Renamed the uabb theme compatibility functions to not include redundant prefix.
# Improvement: Used get_bloginfo() instead of get_option('blogname').

v1.0.1.1
# Added: Welcome screen for in theme page
# Added: Theme page support in base theme.